--- a/asset/scss/modm.scss
+++ b/asset/scss/modm.scss
@@ -131,6 +131,9 @@ a.resource-link:hover{
 		
 		// Submenus
 		& .submenu {
+			
+			z-index: 1000;
+			
 			& li > a,
 			& li.active > a {
 				background-color: $primary-color;
